# policy-reasoner

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  build.rs  deny.toml  run-posix-example.sh  rustfmt.toml  test.json
.github/workflows/: audit.yml  ci.yml  mixin-cargo-check.yml  mixin-cargo-clippy.yml  mixin-cargo-fmt.yml  mixin-cargo-test.yml
examples/: eflint.rs  eflint_json.rs  no_op.rs  posix.rs
examples/config/: jwk_set.json  jwk_set_delib.json  jwk_set_expert.json  jwt_resolver.yaml
examples/eflint/: defs.eflint  example_workflow.eflint  example_workflow_2.eflint  higher_level.eflint
examples/eflint_json/: interface.json
examples/eflint_reasonerconn/: eflint.rs  example-policy.json  example-result.json  example-state.json
examples/requests/: exec-task.json  workflow.json
lib/audit-logger/: Cargo.toml
lib/audit-logger/src/: lib.rs
lib/auth-resolver/: Cargo.toml
lib/auth-resolver/src/: lib.rs
lib/deliberation/: Cargo.toml
lib/deliberation/src/: spec.rs
lib/eflint-json/: Cargo.toml
lib/eflint-json/src/: json.rs  lib.rs
lib/eflint-to-json/: Cargo.toml
lib/eflint-to-json/src/: download.rs  lib.rs  log.rs
lib/loggers/file/: Cargo.toml
lib/loggers/file/src/: lib.rs  logger.rs  stmt.rs
lib/loggers/mock/: Cargo.toml
lib/loggers/mock/src/: logger.rs
lib/loggers/no-op/: Cargo.toml
lib/loggers/no-op/src/: lib.rs  logger.rs
lib/nested-cli-parser/: Cargo.toml
lib/nested-cli-parser/src/: lib.rs  map_parser.rs  spec.rs
lib/policy/: Cargo.toml
lib/policy/data/: policy.db
lib/policy/examples/: sqlite.rs
lib/policy/migrations/2023-10-25-162029_create_policies/: up.sql
lib/policy/src/: lib.rs  policy.rs  sqlite.rs
lib/reasonerconn/: Cargo.toml
lib/reasonerconn/examples/: eflint.rs  example-policy-content.json  example-policy.json  example-state.json  example-workflow.json  return.rs
lib/reasonerconn/src/: base-defs.eflint.json  connector.rs  eflint.rs  lib.rs  spec.rs
lib/reasoners/eflint-json/: Cargo.toml
lib/reasoners/eflint-json/src/: lib.rs  policy.rs  reasonerconn.rs  reasons.rs  spec.rs
lib/reasoners/no-op/: Cargo.toml
lib/reasoners/no-op/src/: lib.rs  reasonerconn.rs
lib/reasoners/posix/: Cargo.toml
lib/reasoners/posix/src/: config.rs  lib.rs  reasonerconn.rs  workflow.rs
lib/resolvers/file/: Cargo.toml
lib/resolvers/file/src/: lib.rs  resolver.rs
lib/spec/: Cargo.toml
lib/spec/src/: auditlogger.rs  context.rs  lib.rs  reasonerconn.rs  reasons.rs  stateresolver.rs
lib/srv/: Cargo.toml
lib/srv/src/: deliberation.rs  lib.rs  models.rs  policy.rs  problem.rs  reasoner_conn_ctx.rs
lib/state-resolver/: Cargo.toml
lib/state-resolver/src/: lib.rs
lib/workflow/: Cargo.toml
lib/workflow/examples/: compile.rs
lib/workflow/src/: compile.rs  eflint.rs  lib.rs  optimize.rs  preprocess.rs  spec.rs  tests.rs  utils.rs  visitor.rs  visualize.rs
migrations/2023-10-25-162029_create_policies/: down.sql  up.sql
migrations/2024-01-03-120312_add_deactivation/: down.sql  up.sql
migrations/2024-01-03-150043_add_policy_base_def/: down.sql  up.sql
policy/eflint/interface/: main.eflint  metadata.eflint  queries.eflint  state.eflint  state_assert.eflint  workflow_assert.eflint  workflow_base.eflint  workflow_ext.eflint
policy/eflint/interface/tests/: test_workflow_ext.eflint
src/: auth.rs  base-defs-full.eflint.json  base-defs.eflint.json  eflint.rs  jwt.rs  lib.rs  logger.rs  main.rs  models.rs  schema.rs  sqlite.rs  state.rs
src/graphql/: api_schema.json
tests/branescript/: attributes.bs  call.bs  call_chain.bs  copy_result.bs  dan-not.bs  dan.bs  data_complex.bs  epi.bs  epi_one.bs  epi_parallel.bs  function.bs  hello_world.bs  if_complex.bs  scopes.bs  task_branch.bs  task_chain.bs  task_loop.bs  task_parallel.bs  with-tags.bs  without-tags.bs
tests/data/st_antonius_ect/: test.yml
tests/data/test/: test.csv  test.yml
tests/data/umc_utrecht_ect/: test.yml
tests/deliberation/: execute-workflow.json
tests/eflint/: no-dan.eflint  only-epi-ect.eflint  only-synthetic.eflint
tests/eflint-json/: empty.json  tautology.json
tests/management/: add-tautology.json
tests/posix/: jedis.json
tests/posix/files/: jedis.csv
tests/wir/: attributes.json  call.json  call_chain.json  copy_result.json  dan-not.json  dan.json  data_complex.json  epi.json  epi_one.json  epi_parallel.json  function.json  hello_world.json  if_complex.json  scopes.json  task_branch.json  task_chain.json  task_loop.json  task_parallel.json  with-tags.json  without-tags.json
tests/workflow/: jedis.json
tools/checker-client/: Cargo.toml
tools/checker-client/src/: main.rs
tools/key-manager/: Cargo.toml
tools/key-manager/src/: main.rs
tools/policy-builder/: Cargo.toml
tools/policy-builder/src/: compile.rs  lib.rs  main.rs
