[package]
name = "policy-reasoner"
version = "0.1.0"
edition = "2021"
authors = [ "Bas Kloosterman", "Tim Müller" ]
repository.workspace = true
description = "Long-awaited implementation of the EPI Framework checkers, which reason about policies and contrain systems like [Brane](https://github.com/epi-project/brane)"


[workspace.package]
repository = "https://github.com/epi-project/policy-reasoner"


[dependencies]
base64ct = { version = "1.6", features = ["std"] }
clap = { version = "4.4.0", features = ["derive", "env"] }
tokio = { version = "1.38.0", features = ["full"] }
workflow = { path = "./lib/workflow" }
deliberation = { path = "./lib/deliberation" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4.21"
reasonerconn = { path = "./lib/reasonerconn" }
policy = { path = "./lib/policy" }
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant" }
srv = { path = "lib/srv" }
state-resolver = { path = "lib/state-resolver" }
auth-resolver = {path = "lib/auth-resolver"}
audit-logger = {path = "lib/audit-logger"}
async-trait = "0.1.67"
serde = {version="1.0.203", features=["derive"]}
serde_json = {version = "1.0.117" , features = ["raw_value"]}
serde_yaml = { version = "0.0.10", package = "serde_yml" }
warp = "0.3"
chrono = "0.4.35"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
jsonwebtoken = "9.2.0"
reqwest = { version = "0.12.0", features = ["json"] }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
graphql_client = { version = "0.13", optional = true }
nested-cli-parser = { path = "lib/nested-cli-parser" }
brane-cfg = { git = "https://github.com/epi-project/brane", optional = true }
specifications = { git = "https://github.com/epi-project/brane", optional = true }
uuid = { version = "1.7.0", features = ["serde", "v4"], optional = true }


[build-dependencies]
base16ct = { version = "0.2", features = ["alloc"] }
diesel = { version = "2.2.0", default-features = false, features = ["sqlite"] }
diesel_migrations = "2.2.0"
# download = { git = "https://github.com/Lut99/download-rs", default-features = false, features = ["download", "tar"] }
eflint-to-json = { path = "./lib/eflint-to-json" }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
sha2 = "0.10.6"


[features]
brane-api-resolver = [ "dep:graphql_client", "dep:brane-cfg", "dep:specifications", "dep:uuid" ]
leak-public-errors = []


[workspace]
resolver = "2"
members = [
    "lib/auth-resolver",
    "lib/deliberation",
    "lib/eflint-to-json",
    "lib/policy",
    "lib/reasonerconn",
    "lib/srv",
    "lib/state-resolver",
    "lib/workflow",
    "lib/audit-logger",
    "lib/nested-cli-parser",

    "tools/checker-client",
    "tools/key-manager",
    "tools/policy-builder",
]
