[package]
name = "audit-logger"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
auth-resolver = {path = "../auth-resolver"}
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
policy = {path = "../policy"}
deliberation = {path = "../deliberation"}
state-resolver = {path = "../state-resolver"}
workflow = {path = "../workflow"}
serde = "1.0"
serde_json = "1.0"
warp = "0.3"
