[package]
name = "audit-logger"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io
async-trait = "0.1.67"
hex = "0.4.3"
serde = "1.0.204"
serde_json = "1.0.120"
warp = "0.3"

# Path
auth-resolver = { path = "../auth-resolver" }
deliberation = { path = "../deliberation" }
policy = { path = "../policy" }
state-resolver = { path = "../state-resolver" }
workflow = { path = "../workflow" }

# Git
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
