[package]
name = "auth-resolver"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
serde = { version = "1.0.204", features = ["derive"] }
warp = "0.3"
