[package]
name = "deliberation"
version = "0.1.0"
edition = "2021"
authors = ["Bas Kloosterman"]
description = "TODO"
repository.workspace = true


[dependencies]
# Crates.io
log = "0.4.21"
serde = { version="1.0.203", features=["derive"] }
serde_json = "1.0.117"
uuid = "1.7.0"
workflow = "0.3"

# Git
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
transform = { git = "https://github.com/Lut99/transform-rs", tag = "v0.1.1" }

# Brane
brane-ast = { git = "https://github.com/epi-project/brane" }
brane-exe = { git = "https://github.com/epi-project/brane" }


[dev-dependencies]
# Crates.io
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4.21"

# Git
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
