[package]
name = "eflint-to-json"
version = "0.1.0"
edition = "2021"
authors = [ "Bas Kloosterman", "Tim Müller" ]
description = "Defines a high-level wrapper around Olaf's [`eflint-to-json`](https://github.com/Olaf-Erkemeij/eflint-server) executable that compiles eFLINT to eFLINT JSON Specification."
repository = "https://github.com/epi-project/policy-reasoner"


[dependencies]
async-recursion = "1.0"
console = "0.15.5"
futures-util = "0.3.30"
hex = "0.4.3"
hex-literal = "0.4"
indicatif = "0.17"
log = "0.4.21"
reqwest = { version = "0.12.0", features = ["blocking", "stream"] }
sha2 = "0.10.6"
tokio = { version = "1.38.0", default-features = false, features = ["fs", "process"]}
