[package]
name = "eflint-to-json"
description = "Defines a high-level wrapper around Olaf's [`eflint-to-json`](https://github.com/Olaf-Erkemeij/eflint-server) executable that compiles eFLINT to eFLINT JSON Specification."
edition = "2021"
version = "0.2.0"
authors = ["Tim Müller"]
repository.workspace = true
license.workspace = true


[dependencies]
async-recursion = { version = "1.0", optional = true }
console = "0.15.5"
futures-util = { version = "0.3.30", optional = true }
hex = "0.4.3"
hex-literal = "0.4"
indicatif = "0.17"
log = { version = "0.4.22", optional = true }
reqwest = { version = "0.12.0", default-features = false, features = ["blocking", "stream"] }
sha2 = "0.10.6"
tokio = { version = "1.40.0", default-features = false, features = ["fs", "io-util", "process"], optional = true }
tracing = { version = "0.1.40", optional = true }


[features]
default = []

async-tokio = ["dep:async-recursion", "dep:futures-util", "dep:tokio"]
log = ["dep:log"]
tracing = ["dep:tracing"]
