[package]
name = "policy"
version = "0.1.0"
edition = "2021"
authors = ["Bas Kloosterman"]
description = ""
repository.workspace = true


[dependencies]
# Crates.io
async-trait = "0.1.67"
chrono = { version = "0.4.35", features=["serde"] }
log = "0.4.21"
serde = {version="1.0.203", features=["derive"]}
serde_json = {version = "1.0.117" , features = ["raw_value"]}
warp = "0.3"

[dev-dependencies]
# Crates.io
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4.21"

# Git
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
