[package]
name = "reasonerconn"
version = "0.1.0"
edition = "2021"
authors = ["Bas Kloosterman"]
description = "Defines the connector that translates for and communicates with a specific reasoner."
repository.workspace = true


[dependencies]
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
log = "0.4.21"
transform = { git = "https://github.com/Lut99/transform-rs" }
policy = { path = "../policy" }
workflow = { path = "../workflow", features = ["eflint"]}
state-resolver = { path = "../state-resolver" }
audit-logger = { path = "../audit-logger" }
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant" }
reqwest = {version = "0.12.0", features = ["blocking"]}
anyhow = "1.0.66"
serde = {version="1.0.203", features=["derive"]}
serde_json = {version = "1.0.117" , features = ["raw_value"]}
async-trait = "0.1.67"
tokio = { version = "1.38.0", features = ["full"] }


[dev-dependencies]
clap = { version = "4.4.0", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4.21"
