[package]
name = "reasonerconn"
description = "Defines the connector that translates for and communicates with a specific reasoner."
edition = "2021"
authors = ["Bas Kloosterman"]
version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
# Crates.io
anyhow = "1.0.66"
async-trait = "0.1.67"
log = "0.4.22"
serde = { version="1.0.204", features=["derive"] }
serde_json = { version = "1.0.120" , features = ["raw_value"] }
tokio = { version = "1.38.0", features = ["full"] }

# Path
audit-logger = { path = "../audit-logger" }
policy = { path = "../policy" }
state-resolver = { path = "../state-resolver" }
workflow = { path = "../workflow", features = ["eflint"]}

# Git
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant" }
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
transform = { git = "https://github.com/Lut99/transform-rs", tag = "v0.1.1" }


[dev-dependencies]
# Crates.io
clap = { version = "4.5.6", features = ["derive"] }
log = "0.4.22"

# Git
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
