[package]
name = "specifications"
description = "Defines various interfaces between various parts of the reasoner."
edition = "2021"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
# enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.1.0", features = ["derive"] }
paste = "1.0.15"
serde = { version = "1.0.204", features = ["derive"] }


[features]
default = []
