[package]
name = "state-resolver"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io
async-trait = "0.1.67"
serde = { version="1.0.203", features=["derive"] }

# Path
workflow = {path = "../workflow"}
