[package]
name = "state-resolver"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io
async-trait = "0.1.67"
serde = { version="1.0.204", features=["derive"] }

# Path
workflow = {path = "../workflow"}
