[package]
name = "workflow"
description = "Defines the workflow representation used internally by the checker."
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
# Crates.io
log = "0.4.22"
num-traits = "0.2.18"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }

# Git
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant", optional = true }
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
transform = { git = "https://github.com/Lut99/transform-rs", tag = "v0.1.1" }

# Brane
brane-ast = { git = "https://github.com/epi-project/brane" }
brane-exe = { git = "https://github.com/epi-project/brane" }
specifications = { git = "https://github.com/epi-project/brane" }


[dev-dependencies]
# Crates
log = "0.4.22"
serde_json = "1.0.120"

# Git
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant", features = ["display_eflint"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
names = { git = "https://github.com/Lut99/names-rs", tag = "v0.1.0", default-features = false, features = ["rand", "three-usualcase"] }

# Brane
brane-shr = { git = "https://github.com/epi-project/brane" }


[features]
"eflint" = [ "dep:eflint-json" ]
