[package]
name = "workflow"
description = "Defines the workflow representation used internally by the checker."
edition = "2021"
authors = [ "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }

enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.1.0", features = ["derive"] }


[features]
default = ["visualize"]

serde = ["dep:serde"]
visualize = []
