[package]
name = "workflow"
description = "Defines the workflow representation used internally by the checker."
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
# Crates.io
log = "0.4.22"
num-traits = "0.2.18"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }

# Workspace dependencies
eflint-json = { workspace = true, optional = true }
enum-debug.workspace = true
transform.workspace = true

# Brane
brane-ast = { git = "https://github.com/epi-project/brane" }
brane-exe = { git = "https://github.com/epi-project/brane" }
specifications = { git = "https://github.com/epi-project/brane" }


[dev-dependencies]
# Crates
log = "0.4.22"
serde_json = "1.0.120"

# Workspace dependencies
eflint-json = { workspace = true, features = ["display_eflint"] }
error-trace.workspace = true
humanlog.workspace = true
names.workspace = true

# Brane
brane-shr = { git = "https://github.com/epi-project/brane" }


[features]
"eflint" = [ "dep:eflint-json" ]
