[package]
name = "checker-client"
description = "A tool to make requests to the checker conveniently, for demo/testing purposes."
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
# Crates.io
chrono = "0.4.35"
clap = { version = "4.5.6", features = ["derive"] }
console = "0.15.5"
hmac = "0.12"
jwt = "0.16"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.0", features = ["blocking"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
sha2 = "0.10.6"

# Path
audit-logger = { path = "../../lib/audit-logger" }
deliberation = { path = "../../lib/deliberation" }
eflint-to-json = { path = "../../lib/eflint-to-json" }
policy = { path = "../../lib/policy" }
srv = { path = "../../lib/srv" }

# Git
eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant", features = ["display_eflint"] }
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
names = { git = "https://github.com/Lut99/names-rs", tag = "v0.1.0", default-features = false, features = ["rand", "three-usualcase"] }

# Brane
brane-ast = { git = "https://github.com/epi-project/brane" }
brane-shr = { git = "https://github.com/epi-project/brane" }
specifications = { git = "https://github.com/epi-project/brane" }
