[package]
name = "key-manager"
description = "A tool that copies `branectl`s behaviour in making it easy to generates key/tokens."
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
# Crates.io
clap = { version = "4.5.6", features = ["derive"] }
humantime = "2.1"
jsonwebtoken = "9.2.0"
log = "0.4.22"

# Git
brane-ctl = { git = "https://github.com/epi-project/brane" }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
