[package]
name = "policy-builder"
version = "0.1.0"
edition = "2021"
authors = [ "Tim Müller" ]
description = "Tool for taking a collection of eFLINT files and compiling them to a single eFLINT JSON Spec."


[dependencies]
# Crates.io
clap = { version = "4.4.0", features = ["derive"] }
console = "0.15.5"
log = "0.4.21"

# Git
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }

# Path
eflint-to-json = { path = "../../lib/eflint-to-json" }
