[package]
name = "policy-builder"
description = "Tool for taking a collection of eFLINT files and compiling them to a single eFLINT JSON Spec."
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
# Crates.io
clap = { version = "4.5.6", features = ["derive"] }
console = "0.15.5"
log = "0.4.22"

# Workspace dependencies
error-trace.workspace = true
humanlog.workspace = true

# Path
eflint-to-json = { path = "../../lib/eflint-to-json" }
