[package]
name = "mock-logger"
description = "Implements an audit logger that doesn't audit log anything but just logs a little using `tracing`."
edition = "2021"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
tracing = "0.1.40"

spec = { path = "../../spec", package = "specifications" }


[features]
default = []
